[package]
name = "graph_search"
version = "0.1.2"
authors = ["polyfooly <vlaso.kirill2011@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 0

[dependencies]
# tokio runtime and utilities
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
futures-util = "0.3.21"
bytes = "1.1.0"

# communication with kafka
# kafka = "0.9.0"
rdkafka = "0.28.0"

# graph search
petgraph = "0.6.2"

# what could this be for...
log = "0.4.17"
simple_logger = "2.1.0"

# config from parameters/env
structopt = "0.3.26"

# parsing and deparsing messages received via kafka
serde = "1.0.137"
serde_json = "1.0.81"
